[gd_scene load_steps=2 format=3 uid="uid://b2j6h8g4y3n5k"]

[ext_resource type="Script" path="res://scripts/shared/lives.gd" id="1_2u4vx"]

[node name="Lives" type="Node2D"]
script = ExtResource("1_2u4vx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 60.0
theme_override_constants/separation = 10

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
expand_mode = 1
stretch_mode = 5

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
expand_mode = 1
stretch_mode = 5

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
expand_mode = 1
stretch_mode = 5 